# earshot

./: .copilotrc.example  .gitignore  CLEANUP_SUMMARY.md  FINAL_PORT_CONFIGURATION.md  NATIVE_ARCHITECTURE_GUIDE.md  PORT_CONFIGURATION.md  PORT_REFERENCE.md  README.md  README_OLD_MEETILY.md  README_SPRINT_1_1.md  SPRINT_1_1_REMEDIATION_PLAN.md  SPRINT_1_COMPLETION_REPORT.md  SPRINT_2_COMPLETION_REPORT.md  SPRINT_3_COMPLETION_REPORT.md  SPRINT_4_COMPLETION_REPORT.md  SPRINT_5_COMPLETION_REPORT.md  SPRINT_7_COMPLETION_REPORT.md  SPRINT_7_FINAL_STATUS.md  SPRINT_8_COMPLETION_REPORT.md  SPRINT_8_KICKOFF.md  SPRINT_8_STATUS_UPDATE.md  SPRINT_9_COMPLETION_REPORT.md  WINDOWS_MIGRATION_COMPLETE.md  WINDOWS_MIGRATION_GUIDE.md  build_frontend.ps1  create_real_speech.py  setup_windows.ps1  sprint_1_1_benchmark_report_20250630_002950.json  sprint_1_1_benchmark_report_20250630_003017.json  sprint_1_1_benchmark_report_20250630_003056.json  sprint_1_1_benchmark_report_20250630_003540.json  sprint_1_1_benchmark_report_20250630_003920.json  sprint_4_performance_results.json  sprint_5_validation.py  sprint_5_validation_results.json  sprint_6_validation.py  sprint_9_validation.py  start_copilot.sh  start_earshot_copilot.ps1  start_frontend.ps1  (+9 more)
backend/: README.md  (+14 more)
backend/whisper-custom/server/: CMakeLists.txt  WEBSOCKET_IMPLEMENTATION_STATUS.md  server.cpp  server_original.cpp  sprint_8_final_validation.py  test_ws_whisper.py  zero_copy_ipc.hpp
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/src/: ipc.rs  lib.rs  main.rs
frontend/src-tauri/src/audio/: core.rs
(+17 files in other folders)
