[package]
name = "earshot-copilot"
version = "0.1.0"
description = "A simple Tauri window manager for Earshot Copilot"
authors = ["Earshot Team"]
license = "MIT"
edition = "2021"
rust-version = "1.77"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.6", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }

# Basic Tauri configuration
tauri = { version = "2.0.6", features = [] }
